Added broadcast function for webapp

--- a/CarPlatform/web/Dockerfile
+++ b/CarPlatform/web/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:20.04
 RUN apt-get update && apt-get upgrade -y
 RUN apt-get install python3 python3-pip -y
-RUN pip3 install smbus2 Flask python-dotenv
+RUN pip3 install smbus2 Flask python-dotenv socket
 
 # Copy files
 WORKDIR /server
@@ -10,4 +10,5 @@ RUN chmod 755 /server/start.sh
 
 # Expose port and run
 EXPOSE 80
+EXPOSE 31337
 CMD ["./start.sh"]
