--- a/CarPlatform/web/Dockerfile
+++ b/CarPlatform/web/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:20.04
 RUN apt-get update && apt-get upgrade -y
 RUN apt-get install python3 python3-pip -y
-RUN pip3 install smbus2 Flask python-dotenv socket
+RUN pip3 install smbus2 Flask python-dotenv
 
 # Copy files
 WORKDIR /server
