--- a/CarPlatform/re/Dockerfile
+++ b/CarPlatform/re/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:20.04
 # ADD RPi.GPIO-0.7.0 RPi.GPIO-0.7.0
 RUN apt-get update && apt-get upgrade -y
-RUN apt-get install python3 python3-pip netcat-traditional -y
+RUN apt-get install python3 python3-pip socat -y
 RUN pip3 install smbus2
 
 # Copy files
